слегка причесал код

--- a/.gitignore
+++ b/.gitignore
@@ -1,15 +1,27 @@
 gosha/
 node_modules/
+data/
 .DS_Store
 Thumbs.db
 .idea
+.Saved/
+_arc/
+_doc/
+build/
+bower_components/
+css/*.css
 *.sublime*
 *.log
 *.psd
 *.ai
-FarMenu.ini
-ex_files
-_arc/*
+*.rar
 *.txt
 *.zip
+ex_files
+.gitignore
+Замечания.*
+FarMenu.ini
+*.min.css
+*.min.js
+*.con
 *.
